# Mock

./: CMakeLists.txt  NOTE.txt  README.md
include/: ex_func.c  ex_func.h  func.h
llt/: CMakeLists.txt
llt/src/: gtest_ut.cpp  main.cpp
llt/stubs/: my_stubs.c
src/: func.c  main.c
